<resources>
    <string name="app_name">¡Presente!</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="myProfile">Mi Perfil</string>
    <string name="mail">Correo</string>
    <string name="password">Contraseña</string>
    <string name="registerMsg">No tienes una cuenta? Registrate ahora</string>
    <string name="login">Log in</string>
    <string name="name">Nombre</string>
    <string name="password2">Confirmar Contraseña</string>
    <string name="registerMsg2">Registrarse</string>
    <string name="Principal">Menu Principal</string>
    <string name="MainActivity">Menú Principal</string>
    <string name="RegisterActivity">Registrarse</string>
    <string name="ProfileActivity">Mi Perfil</string>
    <string name="informacion1">Navega sobre tus multiples cursos</string>
    <string name="informacion2">Ten un control efectivo sobre la asistencia de tus alumnos</string>
    <string name="informacion3">Carga las notas de tus estudiantes de una manera simple.</string>

    <string name="facebook_app_id">570093966710666</string>
    <string name="fb_login_protocol_scheme">fb570093966710666</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cursos">Cursos</string>
    <string name="title_clase1">Asistir</string>
    <string name="title_clase2">Iniciar</string>
    <string name="title_profile">Mi perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="profesor">Soy profe</string>
    <string name="estudiante">Soy estudiante</string>
    <string name="institucion">Institución</string>
    <string name="carnet">Carnet</string>
    <string name="celular">Celular</string>
    <string name="edad2">Edad</string>
    <string name="perdircodigo">Por favor ingresa el código del curso</string>
    <string name="codigo">Codigo</string>
    <string name="ingresar">Ingresar Curso</string>
    <string name="curso">Curso</string>
    <string name="aula">Aula</string>
    <string name="horario">Horario</string>
    <string name="agregar">Agregar Curso</string>
    <string name="numeroestu">Numero de Notas</string>
    <string name="title_activity_show_course">ShowCourseActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Notas</string>
    <string name="tab_text_2">Asistencias</string>
    <string name="cedula">Cédula del estudiante</string>
    <string name="cedula1">cedula</string>
    <string name="numeronota">numero de la nota</string>
    <string name="porcentaje">Porcentaje Nota</string>
    <string name="percentage">porcentaje %</string>
    <string name="descripcion">Descripcion Nota</string>
    <string name="descejem">ejem: Parcial1</string>
    <string name="numeronotaejem">numero entero : 1, 2, etc</string>
    <string name="valornota">Valor Nota</string>
    <string name="valormark">ejem: 3.5</string>
    <string name="ingresarnota">Ingresar Nota</string>
    <string name="fecha">Fecha</string>
    <string name="asistencia">Asistencia</string>
    <string name="bienvenido">Bienvenido</string>


</resources>
