<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotasFragmentProfe">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/cedula"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_marginTop="10dp"
            android:hint="@string/cedula1"
            android:layout_gravity="center_horizontal"
            android:inputType="number"
            android:id="@+id/eCedulaStudent"/>

        <TextView
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Numero Nota"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_marginTop="10dp"
            android:hint="@string/numeronotaejem"
            android:inputType="number"
            android:layout_gravity="center_horizontal"
            android:id="@+id/eNumeroNota"/>

        <TextView
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/porcentaje"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_marginTop="10dp"
            android:hint="@string/percentage"
            android:layout_gravity="center_horizontal"
            android:inputType="number"
            android:id="@+id/ePorcentajeNota"/>

        <TextView
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/descripcion"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_marginTop="10dp"
            android:hint="@string/descejem"
            android:layout_gravity="center_horizontal"
            android:id="@+id/eDescripcionNota"/>

        <TextView
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="text"
            android:text="@string/valornota"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_marginTop="10dp"
            android:hint="@string/valormark"
            android:inputType="numberDecimal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/eValorNota"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/ingresarnota"
            android:layout_gravity="center_horizontal"
            android:id="@+id/bIngresarNota"/>

    </LinearLayout>

</ScrollView>