<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.programacionmoviles.juanpabloarangoa.presenteapp.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profesor"
            tools:ignore="contentDescription"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eName2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="23dp"
            android:hint="@string/name"
            />

        <EditText
            android:id="@+id/eAge2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/edad2"
            />

        <EditText
            android:id="@+id/eCarnet2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:hint="@string/carnet"
            />

        <EditText
            android:id="@+id/eInstitucion2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:hint="@string/institucion"
            />

        <EditText
            android:id="@+id/eCelular2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:hint="@string/celular"
            />

        <EditText
            android:id="@+id/eMail2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/mail"
            />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/rProfe2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profesor"
                android:layout_marginLeft="20dp"
                android:layout_gravity="left"
                android:checked="true"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/rEstudiante2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estudiante"
                android:layout_gravity="right"
                android:layout_marginLeft="120dp"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <Button
            android:id="@+id/bRegister2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:text="@string/registerMsg2"
            android:background="@color/skyblue"
            android:textSize="20sp"
            android:onClick="onButtonClick"
            />

    </LinearLayout>


</LinearLayout>