<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addCourseStudentFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/perdircodigo"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_marginTop="120dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/codigo"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/eCourseCode"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/ingresar"
        android:id="@+id/bIngresarCursoEst"/>

</FrameLayout>